# vllm

./: +  .clang-format  .coveragerc  .dockerignore  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .rules  .shellcheckrc  .typos.toml  .webui_secret_key  .yapfignore  0001-Frontend-Balance-malformed-DiffusionGemma-channel-to.patch  0001-Frontend-Coalesce-duplicate-tool-call-indices-in-str.patch  0001-Frontend-Fix-tool-calls-leaking-as-content-when-no-r.patch  0001-Frontend-Handle-variant-Gemma4-tool-call-syntax-from.patch  0001-Frontend-Omit-unset-fields-from-streaming-DeltaMessa.patch  0001-Frontend-Remove-legacy-Qwen3-parsers-in-favor-of-eng.patch  0001-Frontend-Replace-legacy-Gemma4-parsers-with-engine-b.patch  0001-Frontend-Simplify-Gemma4-bare-thought-parser-and-ded.patch  0001-address-PR-comments-configurable-max_tracker_size-an.patch  0002-address-PR-review-merge-and-rename-FilterReusedOfflo.patch  ;  =4.5.1  @!  ADELIC_README.md  AGENTS.md  AGENT_INITIALIZATION_GUIDE.md  AGENT_PERSONAS.md  AGENT_RESULT.md  ANALYSIS_REPORT.md  (+664 more)
csrc/cpu/: CMakeLists.txt  activation.cpp  activation_impl.cpp  activation_lut_bf16.cpp  attention.cpp  attention_impl.cpp  cache.cpp  cache_impl.cpp  cpu_arch_macros.h  cpu_attn.cpp  cpu_attn_amx.hpp  cpu_attn_amx_fp8.hpp  cpu_attn_fp8.hpp  cpu_attn_impl.hpp  cpu_attn_macros.h  cpu_attn_neon.hpp  cpu_attn_neon_bfmmla.hpp  cpu_attn_nnpa.hpp  cpu_attn_rvv.hpp  cpu_attn_vec.hpp  cpu_attn_vec16.hpp  cpu_attn_vsx.hpp  cpu_attn_vxe.hpp  cpu_fused_moe.cpp  cpu_fused_moe_activations.hpp  cpu_fused_moe_int8.cpp  cpu_ops.h  cpu_tanhf_neon.cpp  cpu_tanhf_neon.hpp  cpu_types.hpp  cpu_types_arm.hpp  cpu_types_base.hpp  cpu_types_generic.hpp  cpu_types_riscv.hpp  cpu_types_riscv_128.hpp  cpu_types_riscv_256.hpp  cpu_types_riscv_defs.hpp  cpu_types_riscv_impl.hpp  cpu_types_scalar.hpp  cpu_types_vsx.hpp  (+32 more)
csrc/cpu/micro_gemm/: cpu_micro_gemm_amx.hpp  cpu_micro_gemm_impl.hpp  cpu_micro_gemm_int8_neon.hpp  cpu_micro_gemm_neon.hpp  cpu_micro_gemm_rvv.hpp  cpu_micro_gemm_vec.hpp
csrc/cpu/scheduler/: chunked_hash_tree.cpp  chunked_hash_tree.hpp
csrc/cpu/sgl-kernels/: blas_gemm.h  common.h  conv.cpp  fla.cpp  fla_stub.cpp  gemm.cpp  gemm.h  gemm_fp8.cpp  gemm_int4.cpp  gemm_int8.cpp  moe.cpp  moe.h  moe_fp8.cpp  moe_int4.cpp  moe_int8.cpp  vec.h  vec_pack.h
csrc/flash_attn_v2/paged_flash/: CMakeLists.txt  Makefile  attention_atom.h  build_blocked_flash.sh  flash.h  flash_api.cu  flash_fwd_hdim128_bf16_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_bf16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_bf16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_bf16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_bf16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_bf16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_bf16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_bf16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  softmax.h  static_switch.h  utils.h
csrc/ftgemm/: CMakeLists.txt  allocator.h  bindings.cpp  cublasINT8MMWrapper.h  cublasMMWrapper.h  cuda_utils.cc  cuda_utils.h  int8_utils.cuh  transform_layout.h
examples/online_serving/dllm_tool/: pyproject.toml
examples/online_serving/structured_outputs/: README.md  pyproject.toml  structured_outputs.py
kernels/: CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  cmake  csrc  pyproject.toml  setup.py
rust/: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  proto  rustfmt.toml  rustfmt.unstable.toml
rust/.config/: nextest.toml
rust/.github/workflows/: ci.yml
rust/proto/: control.proto  inference.proto  vllm_grpc.proto
rust/src/bench/: AGENTS.md  Cargo.toml  README.md
rust/src/chat/: Cargo.toml
rust/src/chat-renderer/: Cargo.toml
rust/src/chat-types/: Cargo.toml
rust/src/cmd/: Cargo.toml
rust/src/engine-core-client/: Cargo.toml
rust/src/llm/: Cargo.toml
rust/src/managed-engine/: Cargo.toml
rust/src/metrics/: Cargo.toml
rust/src/mock-engine/: Cargo.toml  README.md
rust/src/model-files/: Cargo.toml
rust/src/openai-server/: Cargo.toml
rust/src/parser/: .gitignore  Cargo.toml
rust/src/reasoning-parser/: Cargo.toml
rust/src/server/: Cargo.toml  build.rs
rust/src/text/: Cargo.toml
rust/src/tokenizer/: Cargo.toml
rust/src/tool-parser/: Cargo.toml
rust/vllm-api-server/: Cargo.toml  build.rs
rust/vllm-api-server/src/: generated.rs  main.rs  server.rs
tools/vllm-rocm-autotuner-configs/: README.md  pyproject.toml
tools/vllm-rocm-autotuner-configs/tests/: conftest.py  test_configs.py  test_scripts.py  test_utils.py
tools/vllm-rocm-autotuner-configs/tools/: add_signatures.py  generate_signature.py
vllm-kernels/: CMakeLists.txt  MANIFEST.in  Makefile  pyproject.toml  setup.py
vllm-kernels/cmake/: cpu_extension.cmake  utils.cmake
vllm-kernels/cmake/external_projects/: flashmla.cmake  vllm_flash_attn.cmake
vllm-kernels/csrc/: cache_kernels.cu  type_convert.cuh
vllm-kernels/csrc/core/: registration.h  scalar_type.hpp
vllm-kernels/csrc/cpu/: cpu_types_x86.hpp
vllm-kernels/vllm_kernels/: __init__.py  custom_ops.py  scalar_type.py
vllm/tools/gpu_pool/: CMakeLists.txt  README.md  gpu_poold.cc  uds_rpc.cc  uds_rpc.h  vmm_pool_client.cc  vmm_pool_client.h  vmm_pool_pybind.cc
vllm/vision_npu/bridge/: CMakeLists.txt  rai_loader.h  vision_flexmlrt.cpp
vllm_rs/: Cargo.toml  bench_block_pool.py  bench_e2e.py  bench_e2e_long.py  bench_update_loop.py  bench_update_loop_v2.py  pyproject.toml
vllm_rs/_sitehook/: _profile_sched.py  sitecustomize.py
vllm_rs/src/: block.rs  hash_map.rs  lib.rs  pool.rs  request.rs  scheduler_loop.rs
vllm_rs/tests/: test_parity.py
wpi_client/: __init__.py  client.py  pyproject.toml
wpi_client/proto/: __init__.py  generate.sh  wpi.proto  wpi_pb2.py  wpi_pb2_grpc.py
(+23837 files in other folders)
